[gd_scene load_steps=12 format=3 uid="uid://bfqpo5vryw575"]

[ext_resource type="PackedScene" uid="uid://dklup3lo13qq4" path="res://interactables/interactable.tscn" id="1_m7ehu"]
[ext_resource type="Script" path="res://interactables/forge/forge.gd" id="2_aw1k6"]
[ext_resource type="Resource" uid="uid://bms6w2cjkng7" path="res://recipes/shield.tres" id="3_47mkm"]
[ext_resource type="PackedScene" uid="uid://p7p4vf44b1m6" path="res://ui/Elements/ProgressBars/UI_ProgressBar.tscn" id="4_dxxqa"]
[ext_resource type="Resource" uid="uid://82jsikiecvkl" path="res://recipes/spear.tres" id="4_tk8qk"]
[ext_resource type="Texture2D" uid="uid://ct1kinwlxnbsk" path="res://ui/Images/UI_iron.png" id="5_cgdvt"]
[ext_resource type="Resource" uid="uid://bd5k53oviw0wl" path="res://recipes/staff.tres" id="5_uxwen"]
[ext_resource type="Resource" uid="uid://cwktcxkefau7h" path="res://recipes/sword.tres" id="6_aba0p"]
[ext_resource type="Texture2D" uid="uid://cr6pb68orb4fc" path="res://Art/station_forge.png" id="7_33t76"]
[ext_resource type="Texture2D" uid="uid://dra8olsun02hx" path="res://ui/Images/UI_sketchy_spear.png" id="10_3nvse"]
[ext_resource type="Texture2D" uid="uid://bd6u2n0cfqra8" path="res://ui/Images/UI_wood.png" id="10_qrilp"]

[node name="Forge" instance=ExtResource("1_m7ehu")]
script = ExtResource("2_aw1k6")
processing_time = 2.0
recipes = Array[Resource("res://scripts/order.gd")]([ExtResource("3_47mkm"), ExtResource("4_tk8qk"), ExtResource("5_uxwen"), ExtResource("6_aba0p")])

[node name="ItemSprite" parent="." index="0"]
texture = ExtResource("7_33t76")

[node name="ProcessTimer" type="Timer" parent="." index="3"]

[node name="UI_ProgressBar" parent="." index="4" instance=ExtResource("4_dxxqa")]
visible = false
offset_left = -30.0
offset_top = -250.0
offset_right = 70.0
offset_bottom = -150.0

[node name="Items" type="GridContainer" parent="." index="5"]
offset_left = -152.273
offset_top = -180.682
offset_right = 1097.73
offset_bottom = 619.318
scale = Vector2(0.25, 0.083)
theme_override_constants/h_separation = 100
columns = 3

[node name="Item1" type="TextureRect" parent="Items" index="0"]
visible = false
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_cgdvt")
expand_mode = 5

[node name="Item2" type="TextureRect" parent="Items" index="1"]
visible = false
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("10_qrilp")
expand_mode = 5

[node name="Item3" type="TextureRect" parent="Items" index="2"]
visible = false
custom_minimum_size = Vector2(280, 800)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_cgdvt")
expand_mode = 4

[node name="ForgedItem" type="TextureRect" parent="." index="6"]
visible = false
offset_left = -43.1818
offset_top = -192.045
offset_right = 46.8182
offset_bottom = -110.045
texture = ExtResource("10_3nvse")
expand_mode = 2
stretch_mode = 5

[connection signal="timeout" from="ProcessTimer" to="." method="_on_process_timer_timeout"]
